--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,11 +1,40 @@
-.margin_right_20 {
-  margin-right: 20px;
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+/* forms */
+.form_center {
+  margin: 0 300px 0 300px;
+  input, textarea, select {
+  border: 1px solid #bbb;
+  border-radius: 5px;
+  width: 100% !important;
+  margin-bottom: 15px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  }
+  input {
+    height: auto !important;
+  }
+  #error_explanation {
+    color: red;
+    ul {
+      color: red;
+      margin: 0 0 30px 0;
+    }
+  }
+  .field_with_errors {
+    @extend .has-error;
+    .form-control {
+      color: $state-danger-text;
+    }
+  }
 }
 
 .margin_bottom_50 {
   margin-bottom: 50px;
 }
 
-.header_overflow {
-  overflow-y: auto;
+.margin_right_20 {
+  margin-right: 20px
 }
