--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -33,7 +33,7 @@ body {
   color: #ecf0f1;
   overflow-x: visible;
   overflow-y: visible;
-  background: #f9f9f9;
+  background: white;
 }
 
 li {
@@ -360,7 +360,6 @@ background: #FFFFFF !important;
 }
 
 .overlay {
-  background:rgba(0, 0, 0, 0.45) url(pattern.png) repeat;
   position: absolute;
   width: 100%;
   top: 80px;
@@ -505,8 +504,120 @@ background: #FFFFFF !important;
 .delay-2s { animation-delay: 2s; -webkit-animation-delay: 2s; }
 /* custom */
 .button span i.cogelegance-icons- {
-font-size: 20px;
-position: relative;
-right: 13px;
-top: 1px;
+  font-size: 20px;
+  position: relative;
+  right: 13px;
+  top: 1px;
+}
+
+.btn-facebook {
+  color: #fff;
+  background-color: #3b5998;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-facebook:hover, .btn-facebook:focus, .btn-facebook:active,
+  .btn-facebook.active, .open.dropdown-toggle.btn-facebook {
+  color: #fff;
+  background-color: #30487b;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-facebook:active, .btn-facebook.active,
+  .open.dropdown-toggle.btn-facebook {
+  background-image: none
+}
+
+.btn-facebook.disabled, .btn-facebook[disabled],
+  fieldset[disabled].btn-facebook, .btn-facebook.disabled:hover,
+  .btn-facebook[disabled]:hover, fieldset[disabled].btn-facebook:hover,
+  .btn-facebook.disabled:focus, .btn-facebook[disabled]:focus,
+  fieldset[disabled] .btn-facebook:focus, .btn-facebook.disabled:active,
+  .btn-facebook[disabled]:active, fieldset[disabled] .btn-facebook:active,
+  .btn-facebook.disabled.active, .btn-facebook[disabled].active,
+  fieldset[disabled].btn-facebook.active {
+  background-color: #3b5998;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-social-icon {margin-bottom: 4px;}
+
+.btn-twitter {
+  color: #fff;
+  background-color: #2ba9e1;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-twitter:hover, .btn-twitter:focus, .btn-twitter:active,
+  .btn-twitter.active, .open .dropdown-toggle.btn-twitter {
+  color: #fff;
+  background-color: #1c92c7;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-twitter:active, .btn-twitter.active, .open .dropdown-toggle.btn-twitter {
+  background-image: none
+}
+
+.btn-twitter.disabled, .btn-twitter[disabled], fieldset[disabled] .btn-twitter,
+  .btn-twitter.disabled:hover, .btn-twitter[disabled]:hover,
+  fieldset[disabled].btn-twitter:hover, .btn-twitter.disabled:focus,
+  .btn-twitter[disabled]:focus, fieldset[disabled].btn-twitter:focus,
+  .btn-twitter.disabled:active, .btn-twitter[disabled]:active,
+  fieldset[disabled].btn-twitter:active, .btn-twitter.disabled.active,
+  .btn-twitter[disabled].active, fieldset[disabled].btn-twitter.active {
+  background-color: #2ba9e1;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-google-plus {
+  color: #fff;
+  background-color: #dd4b39;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-google-plus:hover, .btn-google-plus:focus, .btn-google-plus:active,
+  .btn-google-plus.active, .open.dropdown-toggle.btn-google-plus {
+  color: #fff;
+  background-color: #ca3523;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.btn-google-plus:active, .btn-google-plus.active,
+  .open.dropdown-toggle.btn-google-plus {
+  background-image: none
+}
+
+.btn-google-plus.disabled, .btn-google-plus[disabled],
+  fieldset[disabled].btn-google-plus, .btn-google-plus.disabled:hover,
+  .btn-google-plus[disabled]:hover, fieldset[disabled] .btn-google-plus:hover,
+  .btn-google-plus.disabled:focus, .btn-google-plus[disabled]:focus,
+  fieldset[disabled] .btn-google-plus:focus, .btn-google-plus.disabled:active,
+  .btn-google-plus[disabled]:active, fieldset[disabled].btn-google-plus:active,
+  .btn-google-plus.disabled.active, .btn-google-plus[disabled].active,
+  fieldset[disabled].btn-google-plus.active {
+  background-color: #dd4b39;
+  border-color: rgba(0,0,0,0.2)
+}
+
+.container_content {
+  color: #155363;
+  background: #cdd8c5;
+  margin-bottom: 10px;
+  padding-bottom:10px;
+  padding-top:10px;
+}
+
+#error_explanation h2{
+  font-size: 15px !important;
+}
+
+.w-nav-link.menu-li, .w-nav-link.menu-li a {
+  color: #155363 !important;
+  font-size: 18px;
+  line-height: 18px;
+}
+
+.w-nav-link.menu-li:hover {
+  text-decoration: none;
 }
