--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,49 +1,9 @@
 <div class="container container_content" >
-  <center><h3><%= t "edit" %> <%= resource_name.to_s.humanize %></h3></center>
+  <center><h3><%= t "devise.mailer.password_change.subject" %></h3></center>
   <div class="form_center">
     <%= form_for resource, as: resource_name,
       url: registration_path(resource_name), html:{method: :put} do |f| %>
       <%= devise_error_messages! %>
-      <div class="field">
-        <%= f.label :name %>
-        <%= f.text_field :name, autofocus: true, class: "form-control"%>
-      </div>
-      <div class="field">
-        <%= f.label :gender %>
-        <div class="row">
-          <span class="col-md-1">
-            <%= f.radio_button :gender, "male" %>
-          </span>
-          <span class="col-md-2"><%= t "male" %></span>
-          <span class="col-md-1">
-            <%= f.radio_button :gender, "female" %>
-          </span>
-          <span class="col-md-2"><%= t "female" %></span>
-          <span class="col-md-1">
-            <%= f.radio_button :gender, "other" %>
-          </span>
-          <span class="col-md-2"><%= t "other" %></span>
-        </div>
-      </div>
-      <div class="field">
-        <%= f.label :birthday %>
-        <%= t "example_date" %>
-        <%= f.date_field :birthday %>
-      </div>
-      <div class="field">
-        <%= f.label :avatar %>
-        <%= f.file_field :avatar, accept: Settings.image_format_accept %>
-      </div>
-      <div class="field">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %>
-      </div>
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>
-          <%= t "currently_waiting_confirmation_for" %>
-          <%= resource.unconfirmed_email %>
-        </div>
-      <% end %>
       <div class="field">
         <%= f.label :password %>
         <i>
