--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-      <%= yield %>
+    <%= render "shared/flash" %>
+    <%= yield %>
     <%= render "layouts/footer" %>
   </body>
 </html>
