--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,40 @@
-<div class="container container_content" >
-  <center><h3><%= t "forgot_your_password" %></h3></center>
-  <div class="form_center">
-    <%= form_for resource, as: resource_name,
-      url: password_path(resource_name), html:{method: :post} do |f| %>
-      <%= devise_error_messages! %>
-      <div class="field">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+<%= render "layouts/background_login" %>
+<div id="login-container"
+  class="animation-fadeIn forgot_password_header top_forgot_password row">
+  <div class="login-title text-center row">
+    <h1>
+      <i class="gi gi-flash"></i>
+      <strong><%= t "workspace" %> </strong>
+      <br>
+      <small>
+        <strong><%= t "forgot_password" %></strong>
+      </small>
+    </h1>
+  </div>
+  <div class="block push-bit login_form row">
+    <div class="row">
+      <%= form_for resource, as: resource_name,
+        url: password_path(resource_name),
+        class: "form-horizontal form-bordered form-control-borderless",
+          html: {method: :post} do |f| %>
+        <div class="form-group">
+          <div class="col-xs-12">
+            <div class="input-group">
+              <span class="input-group-addon"><i class="gi gi-envelope"></i></span>
+              <%= f.email_field :email, autofocus: true,
+                class: "form-control input-lg", placeholder: t("email") %>
+            </div>
+          </div>
+        </div>
+       <div class="form-group row">
+        <%= f.submit t("reset_password"), class: "btn btn-primary col-md-12" %>
       </div>
-      <div class="actions">
-        <%= f.submit t("devise.mailer.reset_password_instructions.subject"),
-          class: "form-control btn btn-primary" %>
+      <% end %>
+    </div>
+    <div class="form-group">
+      <div class="color_format text-center">
+        <%= render "devise/shared/links" %>
       </div>
-    <% end %>
-    <%= render "devise/shared/links" %>
+    </div>
   </div>
 </div>
