--- a/app/assets/stylesheets/workspaces.css
+++ b/app/assets/stylesheets/workspaces.css
@@ -18,3 +18,29 @@
 .ui-accordion .ui-accordion-content {
   padding: 1px;
 }
+.workspace{
+  width:100%;
+  white-space:nowrap;
+}
+.work_span{
+  display: inline-block;
+  vertical-align: top;
+  padding: 5px;
+}
+.myPalet{
+  width: 140px;
+  height: 360px;
+}
+.myDiagram{
+  display: inline-block;
+  vertical-align: top;
+  padding: 5px;
+  width:80%;
+}
+.gDiv{
+  border: solid 1px black;
+  height: 500px;
+}
+.ui-accordion .ui-accordion-content {
+  padding: 1px;
+}
