--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,50 @@
-<div class="container container_content">
-  <center><h3><%= t "devise.mailer.password_change.subject" %></h3></center>
-  <div class="form_center">
-    <%= form_for resource, as: resource_name,
-      url: registration_path(resource_name), html: {method: :put} do |f| %>
+<%= javascript_include_tag "pages/login", "data-turbolinks-track": true %>
+<% provide :title, t("devise.mailer.password_change.subject") %>
+<div class="container well form-horizontal">
+  <%= form_for resource, as: resource_name,
+    url: registration_path(resource_name), html: {method: :put} do |f| %>
+    <fieldset>
       <%= devise_error_messages! %>
-      <div class="field">
-        <%= f.label :password %>
-        <i>
-          <%= t "open_parenthesis" %>
-          <%= t "leave_blank_if_you_do_not_want_to_change_it" %>
-          <%= t "close_parenthesis" %>
-        </i>
-        <%= f.password_field :password, autocomplete: "off",
-          class: "form-control" %>
-        <% if @minimum_password_length %>
-          <em>
-            <%= t "open_parenthesis" %> <%= @minimum_password_length %>
-            <%= t "characters_minimum" %> <%= t "close_parenthesis" %>
-          </em>
-        <% end %>
+      <div class="form-group">
+        <%= f.label :password, class: "col-md-3 control-label" %>
+        <div class="col-md-6 inputGroupContainer">
+          <div class="input-group">
+            <span class="input-group-addon">
+              <i class="gi gi-asterisk"></i>
+            </span>
+            <%= f.password_field :password, autocomplete: "off",
+              class: "form-control", placeholder: t("password") %>
+          </div>
+        </div>
       </div>
-      <div class="field">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: "off",
-          class: "form-control" %>
+      <div class="form-group">
+        <%= f.label :password_confirmation, class: "col-md-3 control-label" %>
+        <div class="col-md-6 inputGroupContainer">
+          <div class="input-group">
+            <span class="input-group-addon">
+              <i class="gi gi-asterisk"></i>
+            </span>
+            <%= f.password_field :password_confirmation, autocomplete: "off",
+              class: "form-control", placeholder: t("retype_password") %>
+          </div>
+        </div>
       </div>
-      <div class="field">
-        <%= f.label :current_password %>
-        <i>
-          <%= t "open_parenthesis" %>
-          <%= t "we_need_your_current_password_to_confirm_your_changes" %>
-          <%= t "close_parenthesis" %>
-        </i>
-        <%= f.password_field :current_password, autocomplete: "off",
-          class: "form-control" %>
+      <div class="form-group">
+        <%= f.label :current_password, class: "col-md-3 control-label" %>
+        <div class="col-md-6 inputGroupContainer">
+          <div class="input-group">
+            <span class="input-group-addon">
+              <i class="gi gi-asterisk"></i>
+            </span>
+            <%= f.password_field :current_password, autocomplete: "off",
+              class: "form-control", placeholder: t("current_password") %>
+          </div>
+        </div>
       </div>
-      <div class="actions">
-        <%= f.submit t("update"), class: "form-control btn btn-primary" %>
+      <div class="form-group row">
+        <%= f.submit t("account_update"),
+          class: "btn btn-primary col-md-offset-4 col-md-2" %>
       </div>
-    <% end %>
-  </div>
+    </fieldset>
+  <% end %>
 </div>
