--- a/app/views/layouts/_header_after_login.html.erb
+++ b/app/views/layouts/_header_after_login.html.erb
@@ -25,7 +25,7 @@
               <%= current_user.name %>
             </div>
             <div class="sidebar-user-links">
-              <%= link_to admin_user_path(current_user),
+              <%= link_to dashboard_user_path(current_user),
                 data: {toggle: "tooltip", placement: "bottom"} do %>
                 <i class="gi gi-user"></i>
               <% end %>
@@ -45,7 +45,7 @@
           </div>
           <ul class="sidebar-nav">
             <li>
-              <%= link_to t("users"), "#" %>
+              <%= link_to t("users"), dashboard_users_path %>
             </li>
             <li>
               <%= link_to t("projects"), dashboard_projects_path %>
@@ -61,7 +61,8 @@
       </div>
     </div>
     <div id="main-container">
-      <div id="page-content">
+      <div class="header_content"><%= yield :title %></div>
+      <div id="page-content" class="color_black">
         <%= render "shared/flash" %>
         <%= yield %>
       </div>
