show data timesheet

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -51,9 +51,9 @@
 }
 
 .container {
-  width: 100%
+  width: 100%;
 }
 
-#page-content{
-  min-height: 540px
+#page-content {
+  min-height: 860px;
 }
