--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="AngularCasts">
   <head>
     <title><%= full_title yield :title %></title>
     <%= csrf_meta_tags %>
@@ -9,6 +9,7 @@
       "data-turbolinks-track": "reload" %>
   </head>
   <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
     <% if user_signed_in? %>
       <%= render "layouts/header_after_login" %>
     <% else %>
