show/edit/destroy setting of company

--- a/app/views/layouts/_header_after_login.html.erb
+++ b/app/views/layouts/_header_after_login.html.erb
@@ -56,6 +56,9 @@
             <li>
               <%= link_to t("workspace"), dashboard_workspaces_path %>
             </li>
+            <li>
+              <%= link_to t("dashboard.company_setting.company"), dashboard_companies_path %>
+            </li>
           </ul>
         </div>
       </div>
