User list my request leaves

--- a/app/assets/stylesheets/request_leaves.scss
+++ b/app/assets/stylesheets/request_leaves.scss
@@ -72,3 +72,14 @@
     }
   }
 }
+
+.request-leaves {
+  padding: 10px;
+
+  .menu-action li {
+    display: inline;
+    float: left;
+    list-style: none;
+    margin-left: 10px;
+  }
+}
