Request off form UI

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -45,12 +45,9 @@
 }
 
 .header_content {
-  background: #f9f9f9;
-  color: #777246;
-  height:60px;
-  text-align:center;
-  font-size:25px;
-  padding:10px
+  background: #F9F9F9;
+  height: 50px;
+  text-align: center;
 }
 
 .container {
