--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,8 @@
-<% flash.each do |message_type, message| %>
-  <%= content_tag :div, message, class: "alert alert-#{message_type}" %>
+<% [:notice, :error, :alert, :success].each do |level| %>
+  <% unless flash[level].blank? %>
+    <div id="flash-message" class="alert <%= flash_class level %> fade in hide-flash">
+      <a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
+      <%= flash[level] %>
+    </div>
+  <% end %>
 <% end %>
