--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "pages/login", "data-turbolinks-track": true %>
+<%= javascript_include_tag "login", "data-turbolinks-track": true %>
 <% provide :title, t("devise.mailer.password_change.subject") %>
 <div class="container well form-horizontal">
   <%= form_for resource, as: resource_name,
