--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,16 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require animate
+ *= require emerald
+ *= require fontello
+ *= require goSamples
+ *= require magnific-popup
+ *= require main
+ *= require normal
+ *= require plugins
+ *= require shortcodes
+ *= require style
  *= require_self
  */
 @import 'bootstrap-sprockets';
