--- a/app/views/request_offs/_form.html.erb
+++ b/app/views/request_offs/_form.html.erb
@@ -1,4 +1,17 @@
 <%= simple_form_for @request_off do |f| %>
+  <div class="form-group">
+    <%= label_tag :employee_name %>
+    <%= text_field_tag :employee_name,
+      current_user.name, disabled: true, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= label_tag :employee_code %>
+    <%= text_field_tag :employee_code,
+      current_user.employee_code, disabled: true, class: "form-control" %>
+  </div>
+  <%= f.input :project_name %>
+  <%= f.input :position_name %>
+  <%= f.input :department %>
   <%= f.input :request_date %>
   <%= f.input :off_have_salary_from %>
   <%= f.input :off_have_salary_to %>
