--- a/app/views/dashboard/personal_issues/new.html.erb
+++ b/app/views/dashboard/personal_issues/new.html.erb
@@ -5,7 +5,7 @@
       <h3><%= t "request_offs.new.personal.title" %></h3>
     </div>
     <div class="form-group">
-      <%= form_tag request_off_path(:user_id), method: :post do %>
+      <%= form_tag dashboard_personal_issue_path(:id), method: :post do %>
         <%= label_tag :staff_name %>
         <%= text_field_tag :staff_name, nil, class: "select-name" %>
 
