--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,10 +6,10 @@
           <%= link_to "Personal Offs", "#" %>
         </li>
         <li>
-          <%= link_to "Request Offs", request_offs_path %>
+          <%= link_to "Request Offs", dashboard_request_offs_path %>
         </li>
         <li>
-          <%= link_to "Request Leaves", request_leaves_path %>
+          <%= link_to "Request Leaves", dashboard_request_leaves_path %>
         </li>
       </ul>
     </div>
