--- a/app/views/dashboard/request_offs/index.html.erb
+++ b/app/views/dashboard/request_offs/index.html.erb
@@ -1,20 +1,33 @@
-<% provide :title, t("request_offs.index.title") %>
-<div class="color_black row">
-  <div class="row">
-    <table class="table table-striped table-hover color_black">
-      <thead>
-        <tr>
-          <th><%= t "index" %></th>
-          <th><%= t "time_off_from" %></th>
-          <th><%= t "time_off_to" %></th>
-          <th><%= t "reason" %></th>
-          <th><%= t "action" %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render partial: "request_off", collection: @request_offs %>
-      </tbody>
-    </table>
-    <center><%= paginate @request_offs %></center>
-  </div>
+<%- model_class = RequestOff -%>
+<div class="page-header">
+  <h1>
+    <%=t ".title", default: model_class.model_name.human.pluralize.titleize %>
+  </h1>
 </div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:phone_number) %></th>
+      <th><%= model_class.human_attribute_name(:address_contact) %></th>
+      <th><%= model_class.human_attribute_name(:off_have_salary_from) %></th>
+      <th><%= model_class.human_attribute_name(:off_have_salary_to) %></th>
+      <th><%= model_class.human_attribute_name(:special_dayoff_setting_id) %></th>
+      <th><%= model_class.human_attribute_name(:off_no_salary_from) %></th>
+      <th><%= model_class.human_attribute_name(:off_no_salary_to) %></th>
+      <th><%= model_class.human_attribute_name(:reason) %></th>
+      <th><%= model_class.human_attribute_name(:special_dayoff_type_id) %></th>
+      <th><%= model_class.human_attribute_name(:status) %></th>
+      <th><%= model_class.human_attribute_name(:approve_group) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%=t ".actions", default: t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= render partial: "request", collection: @request_offs, as: :request_off %>
+  </tbody>
+</table>
+
+<%= link_to t(".new", default: t("helpers.links.new")),
+  new_dashboard_request_off_path,
+  class: "btn btn-primary" %>
