--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -36,16 +36,11 @@
 }
 
 .margin_right_20 {
-  margin-right: 20px
+  margin-right: 20px;
 }
 
-.color_black,.table thead > tr > th {
-  color: black;
-  font-size: 15px;
-}
-
-.header_content {
-  background: #F9F9F9;
+.header-content {
+  background: #f9f9f9;
   height: 50px;
   text-align: center;
 }
