--- a/app/views/dashboard/request_offs/_form.html.erb
+++ b/app/views/dashboard/request_offs/_form.html.erb
@@ -1,4 +1,5 @@
-<%= simple_form_for [:dashboard, @request_off] do |f| %>
+<%= simple_form_for [:dashboard, @request_off],
+  html: {class: "simple_form col-md-6 clearfix"} do |f| %>
   <div class="form-group">
     <%= label_tag :employee_name %>
     <%= text_field_tag :employee_name,
@@ -12,14 +13,39 @@
   <%= f.input :project_name %>
   <%= f.input :position_name %>
   <%= f.input :department %>
-  <%= f.input :request_date %>
-  <%= f.input :off_have_salary_from %>
-  <%= f.input :off_have_salary_to %>
+
+  <div class="form-group">
+    <%= f.label :request_date %>
+    <%= f.date_field :request_date, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :off_have_salary_from %>
+    <%= f.datetime_local_field :off_have_salary_from,
+      class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :off_have_salary_to %>
+    <%= f.datetime_local_field :off_have_salary_to,
+      class: "form-control" %>
+  </div>
+
   <%= f.input :special_dayoff_setting_id %>
   <%= f.input :special_dayoff_type_id %>
 
-  <%= f.input :off_no_salary_from %>
-  <%= f.input :off_no_salary_to %>
+  <div class="form-group">
+    <%= f.label :off_no_salary_from %>
+    <%= f.datetime_local_field :off_no_salary_from,
+      class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :off_no_salary_to %>
+    <%= f.datetime_local_field :off_no_salary_to,
+      class: "form-control" %>
+  </div>
+
   <%= f.input :reason, as: :text, input_html: {rows: 5} %>
 
   <div class="form-actions">
