--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,14 +3,10 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <%= link_to "Personal Offs", "#" %>
+          <%= link_to "Personal Offs", dashboard_personal_issues_path %>
         </li>
         <li>
-          <% if current_user.manager? %>
-            <%= link_to "Request Offs", dashboard_request_offs_path %>
-          <% else %>
-            <%= link_to "Request Offs", request_offs_path %>
-          <% end %>
+          <%= link_to "Request Offs", dashboard_request_offs_path %>
         </li>
         <li>
           <%= link_to "Request Leaves", dashboard_request_leaves_path %>
