--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
  *= require plugins
  *= require shortcodes
  *= require style
+ *= require angular-bootstrap-datetimepicker/src/css/datetimepicker.css
  *= require_self
  */
 @import 'bootstrap-sprockets';
