--- a/app/views/dashboard/time_sheets/index.html.erb
+++ b/app/views/dashboard/time_sheets/index.html.erb
@@ -10,9 +10,21 @@
       </div>
     <% end %>
 
-    <datetimepicker data-ng-model="retrieveTimesheet.content.month" data-on-set-time="onTimeSet(newDate, oldDate)"
+<!--     <datetimepicker data-ng-model="retrieveTimesheet.content.month" data-on-set-time="onTimeSet(newDate, oldDate)"
       data-datetimepicker-config="{startView: 'month', minView:'month'}" />
+    </div> -->
+
+    <div class="dropdown">
+      <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
+        <div class="input-group"><input type="text" class="form-control" data-ng-model="retrieveTimesheet.content.month | date:'MM/yyyy'" data-on-set-time="onTimeSet(newDate, oldDate)"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+        </div>
+      </a>
+      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+        <datetimepicker data-ng-model="retrieveTimesheet.content.month" data-on-set-time="onTimeSet(newDate, oldDate)"
+          data-datetimepicker-config="{ dropdownSelector: '#dropdown2', startView: 'month', minView:'month'}"/>
+      </ul>
     </div>
+
   <div class="row mg-top-50">
     <div class="inner" id="parent">
       <table id="table-timesheet" class="table table-bordered table-hover bg-white">
