manager approve request off

--- a/app/views/dashboard/request_offs/index.html.erb
+++ b/app/views/dashboard/request_offs/index.html.erb
@@ -8,7 +8,7 @@
           <th><%= t "time_off_from" %></th>
           <th><%= t "time_off_to" %></th>
           <th><%= t "reason" %></th>
-          <th><%= t "action" %></th>
+          <th><%= t "status" %></th>
         </tr>
       </thead>
       <tbody>
