--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,11 @@
           <%= link_to "Personal Offs", "#" %>
         </li>
         <li>
-          <%= link_to "Request Offs", dashboard_request_offs_path %>
+          <% if current_user.manager? %>
+            <%= link_to "Request Offs", dashboard_request_offs_path %>
+          <% else %>
+            <%= link_to "Request Offs", request_offs_path %>
+          <% end %>
         </li>
         <li>
           <%= link_to "Request Leaves", dashboard_request_leaves_path %>
