--- a/app/views/dashboard/time_sheets/index.html.erb
+++ b/app/views/dashboard/time_sheets/index.html.erb
@@ -1,6 +1,14 @@
 <div class="content-timesheet" ng-controller="TimesheetsCtrl" >
+  <div class="block">
+    <div class="block-options">
+      <h3 class="text-center text-success">
+        <strong><%= @workspace.name %></strong>
+      </h3>
+    </div>
+  </div>
+
   <div class="col-md-12 form-group">
-    <%= form_tag dashboard_set_timesheets_path(company_id: @company.id,
+    <%= form_tag dashboard_import_timesheets_path(workspace_id: @workspace.id,
       month: @month, year: @year), multipart: true,
       method: :post, id: "import-form" do %>
       <div class="col-md-1 pull-right">
